added html and css

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Thatboy career</title>
+    <title>Thatboy careear</title>
     <style>
       h1 {
         font-size:40px;
@@ -11,38 +11,46 @@
         text-align : center;
       }
       #banner {
-        width: 100%;
+        width: 70%;
         height: 360px;
-        object: fit cover;;
+        object-position: cover-fit;
         
       }
       h2{
         font-size:32px;
         font-family:Roboto;
         font: weight normal;
-        color: rgb(120,120,120);
+        color: rgb(150,120,120);
+        text-align: center;
         
         
       }
-      p{
+      .bodytext{
         font-family:Roboto;
-        font: weight normal;
-        color: rgb(120,120,120);
-        text: align; : center;
+        color: rgb(120,120,120)
         
       }
+    #conteiner {
+      max-width: 720px;
+      margin: 0 auto 0 auto ;
+    }
     </style>
   </head>
   <body>
-    <h1>Thatboy career </h1>
-    <img id ="banner" src="https://da9b3deb-74a2-44dd-afc8-f793baeeb4b7-00-2qc1tfnbqp1lv.sisko.replit.dev//static/m.jpeg">
-    <h2>About thatboy</h2>
-    <p2>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet mauris. Sed viverra tellus in hac habitasse platea dictumst. Et netus et malesuada fames ac turpis. Turpis egestas pretium aenean pharetra magna ac placerat. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Amet est placerat in egestas. Platea dictumst quisque sagittis purus sit. Feugiat sed lectus vestibulum mattis ullamcorper velit. Eu tincidunt tortor aliquam nulla. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Non blandit massa enim nec.
-    </p2>
-    <h2>Open Position</h2>
-    <p>TODO-show the jobs </p>
-    <button>Contact Us</button>
+    <div id ="conteiner">
+      <h1>Thatboy Career </h1>
+      <img id ="banner" src="https://da9b3deb-74a2-44dd-afc8-f793baeeb4b7-00-2qc1tfnbqp1lv.sisko.replit.dev//static/m.jpeg">
+      <h2>About thatboy</h2>
+      <p class="bodytext">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet mauris. Sed viverra tellus in hac habitasse platea dictumst. Et netus et malesuada fames ac turpis. Turpis egestas pretium aenean pharetra magna ac placerat. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Amet est placerat in egestas. Platea dictumst quisque sagittis purus sit. Feugiat sed lectus vestibulum mattis ullamcorper velit. Eu tincidunt tortor aliquam nulla. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Non blandit massa enim nec.
+      </p>
+      <h2>Open Position</h2>
+      <p class = "bodytext">TODO-show the jobs </p>
+      <div style = "text-align:center;">
+      <button>Contact Us</button>
+        <p>Copyright 2024,Thatboy</p>
+      </div>
+    </div>
     
   </body>
 </html>
