made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet mauris. Sed viverra tellus in hac habitasse platea dictumst. Et netus et malesuada fames ac turpis. Turpis egestas pretium aenean pharetra magna ac placerat. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Amet est placerat in egestas. Platea dictumst quisque sagittis purus sit. Feugiat sed lectus vestibulum mattis ullamcorper velit. Eu tincidunt tortor aliquam nulla. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Non blandit massa enim nec.
       </p>
       </div>
-      <h2 class ="text-center mt-2 mb-4">Open Position</h2>
+      <h2 class ="text-center mt-2 mb-4">Job opening</h2>
       <div>
         {% for job in jobs%}
         {%include 'jobitem.html'%}
