change in salary

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -6,7 +6,7 @@
     <div>
       <b> Location: </b>{{job["location"]}}
     </div>
-    {% if 'salary' in job %}
+    {% if 'Salary' in job %}
     <div>
       <b> Salary: </b>{{job["Salary"]}}
     </div>
