added fotter navigation  bar and some changes
nav and footer big  changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,21 +10,33 @@
         height : 360px;
         width:  :100%;
         object-fit : cover;
+        margin-bottom:16px;
+      }
+      .container{
+        margin-top:56px
       }
     </style>
     
     
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container">
-      <h1 class = "text-center mt-2 mb-4">{{company_name}} Career </h1>
+      <h1 class = "text-center mt-2 mb-4"> Thatboy Career </h1>
       <img  class ="img-fluid" id ="banner" src="https://da9b3deb-74a2-44dd-afc8-f793baeeb4b7-00-2qc1tfnbqp1lv.sisko.replit.dev//static/m.jpeg">
-      <h2 class = "text-center mt-2 mb-4">About thatboy</h2>
+      
+      <h2 class = "text-center mt-2 mb-4">About</h2>
+      <div class = "row">
+        <div class = "col-md-6">
       <p class ="lead">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet mauris. Sed viverra tellus in hac habitasse platea dictumst. Et netus et malesuada fames ac turpis. Turpis egestas pretium aenean pharetra magna ac placerat. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Amet est placerat in egestas. Platea dictumst quisque sagittis purus sit. Feugiat sed lectus vestibulum mattis ullamcorper velit. Eu tincidunt tortor aliquam nulla. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Non blandit massa enim nec.
       </p>
+        </div>
+        <div class = "col-md-6">
+        <img src="/static/maths.webp" style="height:320px; border-radius:4px;">
+        </div>
       </div>
-      <h2 class ="text-center mt-2 mb-4">Job opening</h2>
+      <h2 class ="text-center mt-2 mb-4">Open Position</h2>
       <div>
         {% for job in jobs%}
         {%include 'jobitem.html'%}
@@ -32,9 +44,9 @@
       </div>
       <div class = "text-center">
       <button class="btn btn-primary btn-lg">Contact Us</button>
-        <p class ="mt-4">Copyright 2024,Thatboy</p>
       </div>
     </div>
+    {%include 'footer.html'%}
     
   </body>
 </html>
